--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@tanstack/react-table": "^8.21.3",
     "lucide": "^0.548.0",
-    "lucide-react": "^0.548.0",
+    "lucide-react": "^0.553.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
