--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "vercel": "^48.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
