--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@tanstack/react-table": "^8.21.3",
+    "firebase": "^12.5.0",
     "lucide": "^0.548.0",
     "lucide-react": "^0.553.0",
     "prop-types": "^15.8.1",
